2010-08-22
 - ISSUE: selection of 'Connections' is - again - tricky? somehow the shape() is not used?!
 - DataItemType was extended by EXTENDEDGRAPHICSITEM
 - Module.h, Connection.h, Port.h was extended using a generic type() return EXTENDEDGRAPHICSITEM 
   as well as a specialized type (was was used for type() before)
 - GraphicsScene was adapted to distinguish between EXTENDEDGRAPHICSITEM and specialized type

2010-08-20
 - inserted a dummy picture for the module module
 - added a resource file, adapted the src/CMakeLists.txt to use it

2010-08-19
 - Connection uses QGraphicsPathItem instead of QGraphicsLineItem
 - partial fix on the QTreeView issue, needs further fixing: see TODO
 - fixed a drawing issue, where a connection wasn't drawn to the propper center of the parent item. this has something to do with:
    case QGraphicsItem::ItemPositionHasChanged:
    case QGraphicsItem::ItemPositionChange:
   in QVariant Module::itemChange ( GraphicsItemChange change, const QVariant & value ) {
 - WARNING: the QTreeView does not show anything: regression?!
 - when moving an Module (in QGraphicsView) the new position is stored in the Model but not yet read back (only in the constructor)
   that means when save/load is implemented the modules will be back on the correct position but if the position is altered using
   the QTreeView the update won't affect the QGraphicsView until a save/load cycle is done

2010-08-18
 - DataItemType now starts at 65536 which should make it compatible to be used with QGraphicsItem->type(), did work before
   but was against the specification which could result in undefined behaviour.
 - fixed the crash issue. see the first paragraph in TODO which discusses the issue
   at least it does not crash anymore

2010-08-17
 - WARNING: when quitting the program it will crash if at least one connection exists
 - selection of Modules do look better now