@@ -40,7 +40,6 @@ SET( srmg_SOURCES
   # libnoise module frontends -> QGraphicsScene items
   frontend/GraphicsScene.cpp
   frontend/GraphicsView.cpp
-  frontend/ItemView.cpp
   frontend/Module.cpp
   frontend/Port.cpp
   frontend/Connection.cpp
@@ -90,7 +89,6 @@ SET( srmg_MOC_HEADERS
 # frontend 
   frontend/GraphicsScene.h
   frontend/GraphicsView.h
-  frontend/ItemView.h
 )
 
 SET( srmg_UIs
